force-app/src/objects/c2g__AutomatedElimination__c.object
<CustomObject>
    <customHelpPage>c2g__codahelpautomatedelimination</customHelpPage>
    <description>Stores the details required to run an Automated Elimination process</description>
    <fields>
        <fullName>c2g__ApexJobId__c</fullName>
        <description>Unique identifier for the current batch Apex job.</description>
        <label>Apex Job ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__BatchProcess__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A lookup to the batch process when an error has occurred.</description>
        <label>Batch Process</label>
        <referenceTo>c2g__fflib_BatchProcess__c</referenceTo>
        <relationshipLabel>Automated Elimination Process</relationshipLabel>
        <relationshipName>AutomatedEliminationErrorLog</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__DateFrom__c</fullName>
        <description>Date that transactions were retrieved from in the last Automated Elimination process.</description>
        <label>Date From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__DateTo__c</fullName>
        <description>Date that transactions were retrieved to in the last Automated Elimination process.</description>
        <label>Date To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__Description__c</fullName>
        <description>Automated Elimination description</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__DestinationCompany__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to the company that transactions will be posted to. This company must be marked as an Elimination Company.</description>
        <inlineHelpText>Destination company used in the automated elimination process. Only elimination companies are available.</inlineHelpText>
        <label>Destination Company</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The selected Destination Company is not marked as Elimination. Choose an Elimination Company and try again.</errorMessage>
            <filterItems>
                <field>c2g__codaCompany__c.c2g__EliminationCompany__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Automated Eliminations</relationshipLabel>
        <relationshipName>AutomatedEliminations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__DestinationDimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Dimensions used by the last transaction line item of the transaction generated by the  Automated Elimination Process.This transaction line item contains the total source value retrieved by that transaction.</description>
        <label>Destination Dimension 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>c2g__codaDimension1__c.c2g__Disabled__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipLabel>Automated Eliminations</relationshipLabel>
        <relationshipName>AutomatedEliminations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__DestinationDimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Dimensions used by the last transaction line item of the transaction generated by the  Automated Elimination Process.This transaction line item contains the total source value retrieved by that transaction.</description>
        <label>Destination Dimension 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>c2g__codaDimension2__c.c2g__Disabled__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaDimension2__c</referenceTo>
        <relationshipLabel>Automated Eliminations</relationshipLabel>
        <relationshipName>AutomatedEliminations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__DestinationDimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Dimensions used by the last transaction line item of the transaction generated by the  Automated Elimination Process.This transaction line item contains the total source value retrieved by that transaction.</description>
        <label>Destination Dimension 3</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>c2g__codaDimension3__c.c2g__Disabled__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaDimension3__c</referenceTo>
        <relationshipLabel>Automated Eliminations</relationshipLabel>
        <relationshipName>AutomatedEliminations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__DestinationGLA__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to the GLA used by the last transaction line item of the transaction generated by the  Automated Elimination Process.This transaction line item contains the total source value retrieved by that transaction.</description>
        <label>Destination GLA</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Automated Eliminations</relationshipLabel>
        <relationshipName>AutomatedEliminations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__EliminatedTransactionDate__c</fullName>
        <description>Date that transactions were posted in the last Automated Elimination process.</description>
        <label>Eliminated Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__EliminatedTransactionPeriod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Period that transactions were posted in the last Automated Elimination process.</description>
        <label>Eliminated Transaction Period</label>
        <referenceTo>c2g__codaPeriod__c</referenceTo>
        <relationshipLabel>Automated Eliminations</relationshipLabel>
        <relationshipName>AutomatedEliminations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__IncludeBlankDimensions1Filter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that a Dimension 1 Filter records included for the Automated Elimination Run process.</description>
        <label>Include Dimensions 1 Filter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__IncludeBlankDimensions2Filter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that a Dimension 2 Filter is applied to the Automated Elimination record.</description>
        <label>Include Dimensions 2 Filter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__IncludeBlankDimensions3Filter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that a Dimension 3 Filter is applied to the Automated Elimination record.</description>
        <label>Include Dimensions 3 Filter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__IsDimensions1Filter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that a Dimension 1 Filter is applied to the Automated Elimination record.</description>
        <label>Is Dimensions 1 Filter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__IsDimensions2Filter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that a Dimension 2 Filter is applied to the Automated Elimination record.</description>
        <label>Is Dimensions 2 Filter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__IsDimensions3Filter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that a Dimension 3 Filter is applied to the Automated Elimination record.</description>
        <label>Is Dimensions 3 Filter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__IsGLAFilter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that a GLA Filter is applied to the Automated Elimination record.</description>
        <label>Is GLA Filter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>MarkingSource</fullName>
                    <label>Marking Source</label>
                </value>
                <value>
                    <fullName>ProcessingError</fullName>
                    <label>Processing Error</label>
                </value>
                <value>
                    <fullName>MarkingSourceError</fullName>
                    <label>Marking Source Error</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Updating</fullName>
                    <isActive>false</isActive>
                    <label>Updating</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__UseReportingCurrency__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that the Reporting Currency should be used for the destination transaction.</description>
        <inlineHelpText>If selected, the Reporting Currency is used instead of the Dual Currency. All the selected companies, including the Destination Company, must use the same Reporting Currency.</inlineHelpText>
        <label>Use Reporting Currency</label>
        <type>Checkbox</type>
    </fields>
    <label>Automated Elimination</label>
    <listViews>
        <fullName>c2g__All</fullName>
        <columns>NAME</columns>
        <columns>c2g__Description__c</columns>
        <columns>c2g__DestinationCompany__c</columns>
        <columns>c2g__DestinationGLA__c</columns>
        <columns>c2g__DestinationDimension1__c</columns>
        <columns>c2g__DestinationDimension2__c</columns>
        <columns>c2g__DestinationDimension3__c</columns>
        <columns>c2g__DestinationDimension4__c</columns>
        <columns>c2g__Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Automated Elimination Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Automated Eliminations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>